--- a/styles/SCSS/mainStyle.scss
+++ b/styles/SCSS/mainStyle.scss
@@ -23,12 +23,12 @@ body {
                 width: 700px;
                 height: 400px;
                 margin: 0px;
-                border-radius: 13%;
+                border-radius: 103%;
                 z-index: 0;
                 .topBar {
                     width: 100%;
                     height: 5%;
-                    background-color: cadetblue;
+                    background-color: #23252e;
                     display: flex;
                     flex-flow: row nowrap;
                     &:hover {
@@ -47,7 +47,8 @@ body {
                     }
                     .appName {
                         padding-left: 10px;
-                        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                        color: #e2e4eb;
                         -webkit-touch-callout: none;
                         /* iOS Safari */
                         -webkit-user-select: none;
@@ -68,24 +69,33 @@ body {
                         width: 100px;
                         display: flex;
                         flex-flow: row nowrap;
+                        &>* {
+                            text-align: center;
+                            font-family: 'Arial Narrow', Arial, sans-serif;
+                            color: aliceblue;
+                            transition: background-color 1s;
+                        }
+                        &>*:hover {
+                            background-color: #474750;
+                        }
                         .reduceButton {
                             flex: 1;
-                            background-color: brown;
                         }
                         .fullscreenButton {
                             flex: 1;
-                            background-color: darkgreen;
                         }
                         .closeButton {
                             flex: 1;
-                            background-color: crimson;
+                            display: inline-block;
+                            content: "x";
+                            /* This will render the 'X' */
                         }
                     }
                 }
                 .core {
                     width: 100%;
                     height: 95%;
-                    background-color: antiquewhite;
+                    background-color: #232a35;
                 }
             }
         }
