--- a/styles/SCSS/mainStyle.scss
+++ b/styles/SCSS/mainStyle.scss
@@ -101,7 +101,7 @@ body {
         }
         #osMenuPannelContainer {
             width: 50%;
-            height: 0%;
+            height: 60%;
             position: absolute;
             bottom: 0;
             left: 0;
@@ -153,6 +153,22 @@ body {
             }
             .rightSubPannel {
                 grid-area: 2 / 3 / 8 / 7;
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: flex-start;
+                .appLaucher {
+                    border-radius: 5px;
+                    width: 70px;
+                    height: 70px;
+                    background-color: #8c8d94;
+                    background-position: center;
+                    /* Center the image */
+                    background-repeat: no-repeat;
+                    /* Do not repeat the image */
+                    background-size: contain;
+                    /* Resize the background image to cover the entire container */
+                    cursor: pointer;
+                }
             }
             .bottomSubPannel {
                 grid-area: 8 / 1 / 9 / 7;
