--- a/styles/SCSS/mainStyle.scss
+++ b/styles/SCSS/mainStyle.scss
@@ -114,7 +114,7 @@ body {
             bottom: 0;
             left: 0;
             background-color: #25262F;
-            border-bottom: solid 0px grey;
+            border-bottom: solid 0px rgb(114, 114, 114);
             border-radius: 0% 1% 0% 0%;
             transition: height .5s;
             z-index: 21;
