--- a/styles/CSS/mainStyle.css
+++ b/styles/CSS/mainStyle.css
@@ -26,12 +26,12 @@ body #desktop #windowsContainer .window {
   width: 700px;
   height: 400px;
   margin: 0px;
-  z-index: 0;
+  z-index: 30;
   border: 2px solid #23252e;
 }
 body #desktop #windowsContainer .window .topBar {
   width: 100%;
-  height: 5%;
+  height: 20px;
   background-color: #23252e;
   display: flex;
   flex-flow: row nowrap;
@@ -71,7 +71,7 @@ body #desktop #windowsContainer .window .topBar .navButton {
   cursor: pointer;
   position: absolute;
   right: 0;
-  height: 5%;
+  height: 18px;
   width: 100px;
   display: flex;
   flex-flow: row nowrap;
@@ -111,7 +111,7 @@ body #desktop #windowsContainer .window .core .contentLink {
 }
 body #desktop #osMenuPannelContainer {
   width: 40%;
-  height: 60%;
+  height: 0%;
   position: absolute;
   bottom: 0;
   left: 0;
