--- a/styles/SCSS/mainStyle.scss
+++ b/styles/SCSS/mainStyle.scss
@@ -23,11 +23,11 @@ body {
                 width: 700px;
                 height: 400px;
                 margin: 0px;
-                z-index: 0;
+                z-index: 30;
                 border: 2px solid #23252e;
                 .topBar {
                     width: 100%;
-                    height: 5%;
+                    height: 20px;
                     background-color: #23252e;
                     display: flex;
                     flex-flow: row nowrap;
@@ -66,7 +66,7 @@ body {
                         cursor: pointer;
                         position: absolute;
                         right: 0;
-                        height: 5%;
+                        height: 18px;
                         width: 100px;
                         display: flex;
                         flex-flow: row nowrap;
@@ -109,7 +109,7 @@ body {
         }
         #osMenuPannelContainer {
             width: 40%;
-            height: 60%;
+            height: 0%;
             position: absolute;
             bottom: 0;
             left: 0;
